--- a/bio.html
+++ b/bio.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <section id="resum">
-            <h2>Resum Professional</h2>
+            <h2>Resum </h2>
             <p>Professional amb àmplia trajectòria en Service Delivery i suport tècnic especialitzat, amb un enfocament estratègic en la integració de sistemes ERP/API. Combina sòlida experiència tècnica amb excel·lents habilitats de gestió de projectes, demostrant capacitat comprovada per liderar migracions complexes i implementacions tecnològiques d'alt impacte.</p>
         </section>
 
@@ -48,7 +48,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 El Teu Nom</p>
+        <p>&copy; 2024 Francesc Bedós</p>
     </footer>
 </body>
 </html>
