--- a/bio.html
+++ b/bio.html
@@ -19,7 +19,9 @@
 
         <section id="especialitzacio">
             <h2>Especialització Actual</h2>
-            <p>Actualment especialitzat en facturació electrònica, aprofitant 3 anys d'experiència consolidada en el sector e-health que li proporciona una perspectiva única sobre les necessitats regulatòries i de compliment en entorns crítics.</p>
+            <p> especialitzat en facturació electrònica,  que em proporcionen una perspectiva única sobre les necessitats regulatòries (Verifactu-Peppol) i de compliment en entorns crítics(Facturae-XML).
+                i amb 3 anys d'experiència en el sector e-health.
+            </p>
         </section>
 
         <section id="competencies">
