--- a/bio.html
+++ b/bio.html
@@ -19,7 +19,7 @@
 
         <section id="especialitzacio">
             <h2>Especialització Actual</h2>
-            <p> especialitzat en facturació electrònica,  que em proporcionen una perspectiva única sobre les necessitats regulatòries (Verifactu-Peppol) i de compliment en entorns crítics(Facturae-XML).
+            <p> Especialitzat en facturació electrònica, amb una perspectiva única sobre les necessitats regulatòries (Verifactu-Peppol) i de compliment en entorns crítics(Facturae-XML).
                 i amb 3 anys d'experiència en el sector e-health.
             </p>
         </section>
@@ -41,7 +41,7 @@
                 <li>✅ Polivalència tecnològica - Experiència integral des de desenvolupament web fins a IoT i Intel·ligència Artificial</li>
                 <li>✅ Visió 360º - Perspectiva multisectorial adquirida a través d'experiència en e-health, logística i sector audiovisual</li>
                 <li>✅ Orientació a resultats - Historial demostrat d'èxit en projectes crítics amb impacte empresarial mesurable</li>
-                <li>✅ Adaptació constant - Compromís amb la formació contínua en tecnologies emergents</li>
+                <li>✅ Adaptació constant -  Formació contínua en tecnologies emergents</li>
             </ul>
         </section>
 
