--- a/bio.html
+++ b/bio.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="hotels.css">
 </head>
 <body>
+  <div class="background-container">
     <header>
         <h1>Perfil Professional</h1>
         <a href="index.html" class="button">Enrera / Inici</a>
@@ -53,5 +54,6 @@
     <footer>
         <p>&copy; 2025 Francesc Bedós</p>
     </footer>
+  </div>
 </body>
 </html>
