--- a/bio.html
+++ b/bio.html
@@ -16,7 +16,11 @@
     <main>
         <section id="resum">
             <h2>Resum </h2>
-            <p>Professional amb àmplia trajectòria en Service Delivery i suport tècnic especialitzat, amb un enfocament estratègic en la integració de sistemes ERP/API. Combina sòlida experiència tècnica amb excel·lents habilitats de gestió de projectes, demostrant capacitat comprovada per liderar migracions complexes i implementacions tecnològiques d'alt impacte.</p>
+            <p>Professional amb àmplia trajectòria en Desenvolupament web, Service
+Delivery, integracions API i suport tècnic especialitzat.
+Combino sòlida experiència tècnica amb excel·lents habilitats de gestió de
+projectes, demostrant capacitat comprovada per liderar migracions complexes i
+implementacions tecnològiques d'alt impacte.</p>
         </section>
 
         <section id="especialitzacio">
