--- a/bio.html
+++ b/bio.html
@@ -17,16 +17,27 @@
         <section id="resum">
             <h2>Resum </h2>
             <p>Professional amb àmplia trajectòria en Desenvolupament web, Service
-Delivery, integracions API i suport tècnic especialitzat.
-Combino sòlida experiència tècnica amb excel·lents habilitats de gestió de
-projectes, demostrant capacitat comprovada per liderar migracions complexes i
-implementacions tecnològiques d'alt impacte.</p>
+Delivery, integracions API i suport tècnic especialitzat.<br>
+            Amb més de 4 anys d'experiència en el sector tecnològic, he demostrat
+            la meva capacitat per liderar projectes complexos i proporcionar solucions
+            innovadores que milloren l'eficiència operativa i l'experiència del client.</p>
+        </section>
+
+        <section id="experiencia">
+            <h2>Experiència Professional</h2>
+            <p>He treballat en diversos sectors, incloent e-health, logística i audiovisual,
+            aportant una visió àmplia i una adaptabilitat excepcional a diferents entorns
+            tecnològics.
+            Combino sòlida experiència tècnica amb excel·lents habilitats de gestió de
+            projectes, demostrant capacitat comprovada per liderar migracions complexes i
+            implementacions tecnològiques d'alt impacte.</p>
         </section>
 
         <section id="especialitzacio">
             <h2>Especialització Actual</h2>
-            <p> Especialitzat en facturació electrònica, amb una perspectiva única sobre les necessitats regulatòries (Verifactu-Peppol) i de compliment en entorns crítics(Facturae-XML).
-                i amb 3 anys d'experiència en el sector e-health.
+            <p> Desenvolupant webs amb Vibe coding (Jules,Cursor) i amb eines de IA com NotebookLM, Perplexity, HeyGen. <br>
+               Experiència en facturació electrònica, amb una perspectiva única sobre les necessitats regulatòries (Verifactu-Peppol) i de compliment en entorns crítics(Facturae-XML).
+               i amb 3 anys d'experiència en el sector e-health(PHP,MySql,JS)
             </p>
         </section>
 
